[tool.poetry]
name = "spectra-xai-benchmark"
version = "0.1.0"
description = ""
authors = ["syntax2 <akadian135@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.3.1"
matplotlib = "^3.10.3"
jupyter = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
