[tool.poetry]
name = "spectra-xai-benchmark"
version = "0.1.0"
description = ""
authors = ["syntax2 <akadian135@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.12"
numpy = "*"
pandas = "*"
matplotlib = "*"
jupyter = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
